# quick_ds_python

./: .flake8  .gitignore  .pre-commit-config.yaml  README.md  cluster_demo.ipynb  pyproject.toml  requirement.txt  simple_ds.ipynb  supervised_clf_demo.ipynb  supervised_reg_demo.ipynb
algorithm_implement/: linear_regression.ipynb
algorithm_implement/.ipynb_checkpoints/: demo-checkpoint.ipynb
blogs/: rf_exp.ipynb
data_viz/plotly/: plotly_gallery.ipynb
data_viz_collection/plotly/: plotly_gallery.ipynb
nice_things/: a_b_test.py  test.ipynb  tune_grid.py
quick_ds/: eda.ipynb  supervised_learning.ipynb
quick_ds/Python/: data_preprocess.ipynb  eda.ipynb  supervised_learning.ipynb  unsupervised_learning.ipynb
quick_ds/Python/.ipynb_checkpoints/: supervised_learning-checkpoint.ipynb
src/: eda.py  evaluate.py  explain.py  model_cluster.py  model_supervised.py  preprocess.py
test/: test_eda.py  test_preprocess.py
