[tool.poetry]
name = "quick_ds_python"
version = "0.1.0"
description = ""
authors = ["Martin Pan"]

[tool.poetry.dependencies]
python = "3.8.8"
pandas = "^1.3.0"
numpy = "1.19.5"
scikit-learn = "0.24.1"
matplotlib = "3.3.2"
treeinterpreter = "0.2.3"
plotly = "4.14.1"
jupyter = "^1.0.0"
ray = {extras = ["default"], version = "1.6.0"}
tune-sklearn = "0.4.0"
hyperopt = "0.2.5"
lime = "^0.2.0"
pandas-profiling = "^3.0.0"

[tool.poetry.dev-dependencies]
pre-commit = "^2.15.0"
flake8 = "^3.9.2"
black = "^21.8b0"
pytest = "^6.2.5"
pytype = "^2022.1.13"
mypy = "^0.931"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
